--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#cacaca"
+    android:background="@drawable/bg"
     android:orientation="vertical"
     tools:context=".RegisterActivity">
 
@@ -20,6 +20,12 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:layout_marginTop="20dp"
+        android:src="@drawable/illustration"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"/>
 
     <EditText
         android:layout_marginStart="15dp"
@@ -70,7 +76,7 @@
         android:layout_marginEnd="15dp"
         android:padding="12dp"
         android:textSize="25sp"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_gravity="center"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
