--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#cacaca"
+    android:background="@drawable/bg"
     android:orientation="vertical"
     tools:context=".LoginActivity">
 
@@ -56,7 +56,7 @@
         android:layout_marginEnd="15dp"
         android:padding="12dp"
         android:textSize="25sp"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_gravity="center"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
@@ -68,7 +68,7 @@
         android:layout_marginEnd="15dp"
         android:padding="12dp"
         android:id="@+id/txtReg"
-        android:textColor="#F1F"
+        android:textColor="#000000"
         android:text="@string/do_not_have_an_account_register"
         android:textAlignment="center"
         android:textSize="15sp"
