--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -76,4 +76,18 @@
         android:layout_height="wrap_content"
         android:text="@string/register"/>
 
+    <TextView
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="57dp"
+        android:layout_marginEnd="15dp"
+        android:padding="12dp"
+        android:id="@+id/txtReg"
+        android:textColor="#000000"
+        android:text="@string/already_have_an_account"
+        android:textAlignment="center"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
