--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,71 +8,63 @@
     tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
-        android:layout_marginTop="30dp"
-        app:cardCornerRadius="8dp"
         android:layout_width="match_parent"
-        android:layout_height="160dp">
+        android:layout_height="160dp"
+        app:cardCornerRadius="5dp">
+
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
 
             <ImageView
-                android:layout_margin="8dp"
                 android:id="@+id/imagV"
-                android:padding="15dp"
-                android:src="@drawable/illustration"
                 android:layout_width="150dp"
-                android:layout_height="150dp"/>
+                android:layout_height="150dp"
+                android:layout_margin="8dp"
+                android:padding="15dp"
+                android:src="@drawable/illustration" />
 
             <LinearLayout
-                android:orientation="vertical"
-                android:layout_toEndOf="@+id/imagV"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_toEndOf="@+id/imagV"
+                android:orientation="vertical">
 
                 <TextView
-                    android:layout_margin="10dp"
                     android:id="@+id/etEmail"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:hint="example@example.com"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:hint="example@example.com"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
 
                 <LinearLayout
-                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
                     <TextView
-                        android:text="John"
-                        android:layout_margin="10dp"
                         android:id="@+id/etFname"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                    <TextView
-                        android:text="Doe"
+                        android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:id="@+id/etLname"
+                        android:text="John"
                         android:textSize="20sp"
-                        android:textStyle="bold"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/etLname"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="Doe"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
             </LinearLayout>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
-
-    <Button
-        android:layout_gravity="center"
-        android:text="Logout"
-        android:textStyle="bold"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
-        android:layout_margin="20dp"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"/>
 
 </LinearLayout>
